FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_PATH})

#MESSAGE("CURSES_CURSES_LIBRARY = ${CURSES_CURSES_LIBRARY}")
#MESSAGE("CURSES_NCURSES_LIBRARY = ${CURSES_NCURSES_LIBRARY}")
#MESSAGE("CURSES_USE_NCURSES = ${CURSES_USE_NCURSES}")
#MESSAGE("CURSES_CURSES_HAS_WSYNCUP = ${CURSES_CURSES_HAS_WSYNCUP}")
#MESSAGE("CURSES_NCURSES_HAS_WSYNCUP = ${CURSES_NCURSES_HAS_WSYNCUP}")
#MESSAGE("CURSES_HAVE_CURSES_H = ${CURSES_HAVE_CURSES_H}")
#MESSAGE("CURSES_CURSES_H_PATH = ${CURSES_CURSES_H_PATH}")
#MESSAGE("CURSES_HAVE_NCURSES_H = ${CURSES_HAVE_NCURSES_H}")
#MESSAGE("CURSES_HAVE_NCURSES_NCURSES_H = ${CURSES_HAVE_NCURSES_NCURSES_H}")
#MESSAGE("CURSES_HAVE_NCURSES_CURSES_H = ${CURSES_HAVE_NCURSES_CURSES_H}")

FIND_PACKAGE(OpenCV REQUIRED)
#uncomment on ubuntu 8.04
#INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})

ADD_EXECUTABLE(wamManualControl wamManualControl.cpp ImageHandler.cpp ImageHandler.h)
TARGET_LINK_LIBRARIES(wamManualControl wamdriver  ${IRIUTILS_LIBRARIES} ${IRIUTILS_LIBRARY} ${comm_LIBRARY} ${comm_LIBRARIES} ${CURSES_LIBRARIES} ${OPENCV_LIBRARIES} ${OpenCV_LIBS})

