FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_PATH})

FIND_PACKAGE(OpenCV REQUIRED)
#uncomment on ubuntu 8.04
#FIND_PACKAGE(OpenCV REQUIRED)
#INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})

ADD_EXECUTABLE(wamManualControlJoints wamManualControlJoints.cpp ImageHandler.cpp ImageHandler.h)
TARGET_LINK_LIBRARIES(wamManualControlJoints wamdriver  ${IRIUTILS_LIBRARIES} ${IRIUTILS_LIBRARY} ${comm_LIBRARY} ${comm_LIBRARIES} ${CURSES_LIBRARIES} ${OPENCV_LIBRARIES} ${OpenCV_LIBS})

