FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})

ADD_EXECUTABLE(wamtestHandeye wamTestHandeye.cpp ImageHandler.cpp ImageHandler.h)
TARGET_LINK_LIBRARIES(wamtestHandeye wamdriver  ${IRIUTILS_LIBRARIES} ${IRIUTILS_LIBRARY} ${comm_LIBRARY} ${comm_LIBRARIES} ${OPENCV_LIBRARIES} ${OpenCV_LIBS})

